<resources>
    <string name="app_name">Pneumonia Detection</string>

    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="patient_detail">Patient Detail</string>

    <string name="welcome">Welcome</string>
    <string name="something_wrong_message">Oops.. Something went wrong</string>
    <string name="cannot_load_image_message">Couldn\'t load image, please try again</string>
    <string name="logout_message">Logout success..</string>

    <string name="select_picture">Select Picture</string>
    <string name="picture_input">Picture..</string>
    <string name="image_not_valid">Select a picture</string>
    <string name="patient_name">Patient Name</string>
    <string name="name_input">Name..</string>
    <string name="patient_not_valid">Patient name cannot be empty</string>
    <string name="scan_now">Scan Now</string>

    <string name="result">Result</string>
    <string name="pneumonia">Pneumonia</string>

    <string name="example_id_patient">#P0001</string>
    <string name="example_patient_name">Adam Florence</string>

    <string name="pneumonia_detection_logo">Pneumonia Detection Logo</string>
    <string name="username">Username :</string>
    <string name="username_input">Username..</string>
    <string name="username_not_valid">Username cannot be empty</string>
    <string name="password">Password :</string>
    <string name="password_input">Password..</string>
    <string name="password_not_valid">Password cannot be empty</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="copyright_text">© Bangkit 2021 | AlveX Team</string>

    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="patient_code">Patient Code</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="x_ray_image">X-Ray Image</string>
    <string name="prediction">Prediction</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="colon">:</string>
    <string name="closing">)</string>
</resources>